# django-svelte-integration-guide

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
frontend/: package-lock.json  vite.config.js
frontend/src/: App.svelte
project/: settings.py  urls.py
spa/: apps.py  urls.py  views.py
spa/templates/frontend/: base.html
spa/templatetags/: render_svelte.py
